--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>welcome to my web</h1>
+    <h1 style ="color:blue;">welcome to my web</h1>
     <h2> hello </h2>
     hello, world
 </body>
